--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <img src="/images/clouds.png" class="cloud">
         <img src="/images/mario.gif" class="mario ">
         <img src="/images/pipe.png" class="pipe">
+        <div class="counter">Jumps: <span id="jumpCounter">0</span></div>
+        <div class="ground"></div>
         
 
     </div>
