novo ajuste com modal

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
         <img src="/images/clouds.png" class="cloud">
         <img src="/images/mario.gif" class="mario ">
         <img src="/images/pipe.png" class="pipe">
-        <div class="counter">Jumps: <span id="jumpCounter">0</span></div>
+        <div class="counter">Jumps: <span id="jumpCounter">00</span></div>
         <div class="ground"></div>
         
 
+        <div class="botao-container" id="botaoContainer">
+            <button class="botao" id="restartButton" onclick="restartGame()">Reiniciar</button>
+        </div>
+
     </div>
 
-    <input type="button" value="começar" onClick="history.go(0)" class="botão">
     
 </body>
 </html>
